# ft-scservo-qt6-dds

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  GUI.md  Main.qml  PROTOCOL.md  README.md  USER_QOS_PROFILES.xml  build.ps1  run.ps1  scservo.idl  scservo_qos.xml.bak  test_comm.ps1
.gemini/: implementation_plan.md
daemon/: SerialPort.cpp  SerialPort.hpp  ServoDaemon.cpp  ServoDaemon.hpp  main.cpp
daemon/servo/: scscl.h  scserial.cpp  scserial.h  servo_types.h  sms_sts.h  wrapper_headers.h
gui/: DdsManager.cpp  DdsManager.hpp  main.cpp
tests/: test_servo_daemon.cpp
